Formatting changes to ToC page (#870)
* Formatting changes to ToC page

* Change ebook_exist function to check for pdf and not template

--- a/src/static/css/page.css
+++ b/src/static/css/page.css
@@ -512,6 +512,10 @@ figure .fig-desktop {
   .index .index-box {
     max-height: 100%;
   }
+  .anchor-link {
+    padding-left: 0;
+    margin-left: 0;
+  }
   .anchor-link:hover::before,
   .anchor-link:focus::before {
     content: '';
