--- a/src/templates/base/2019/contributors.html
+++ b/src/templates/base/2019/contributors.html
@@ -7,6 +7,10 @@
 {% block styles %}
 {{ super() }}
 <style>
+.main {
+  padding-left: 10px;
+  padding-right: 10px;
+}
 .team {
   display: flex;
   flex-direction: row;
@@ -149,6 +153,10 @@
 {% endfor %}
 
 @media (max-width: 600px) {
+  .main {
+    padding-left: 0;
+    padding-right: 0;
+  }
   .team {
     height: 100px;
   }
