--- a/src/templates/en/2019/base.html
+++ b/src/templates/en/2019/base.html
@@ -114,6 +114,7 @@ Unless otherwise noted, the metrics in all of the 20 chapters of the Web Almanac
 {% block appendix %}Appendix{% endblock %}
 {% block appendices %}Appendices{% endblock %}
 
+{% block ebook_title %}Ebook{% endblock %}
 {% block ebook_download %}Download the entire {{ year }} Web Almanac in PDF format{% endblock %}
 {% block ebook_download_note %}(generated with <a href="https://www.princexml.com/">www.princexml.com</a>){% endblock %}
 
