--- a/src/templates/fr/2019/base.html
+++ b/src/templates/fr/2019/base.html
@@ -114,6 +114,7 @@ Sauf indication contraire, les statistiques des 20 chapitres du Web Almanac prov
 {% block appendix %}Annexe{% endblock %}
 {% block appendices %}Annexes{% endblock %}
 
+{% block ebook_title %}Ebook{% endblock %}
 {% block ebook_download %}Download the entire {{ year }} Web Almanac in PDF format{% endblock %}
 {% block ebook_download_note %}(generated with <a href="https://www.princexml.com/">www.princexml.com</a>){% endblock %}
 
