Fix colour on Language selector as causing Firefox issue (#872)

--- a/src/templates/base/2019/base.html
+++ b/src/templates/base/2019/base.html
@@ -330,7 +330,7 @@
       {{ l }}
     </option>
     {% endfor %}
-    <option disabled="disabled">
+    <option disabled="disabled" aria-hidden="true">
       ────
     </option>
     <option value="https://github.com/HTTPArchive/almanac.httparchive.org/wiki/Translators'-Guide">
