--- a/src/static/css/2019.css
+++ b/src/static/css/2019.css
@@ -588,7 +588,7 @@ header .cta {
 .language-switcher option,
 .year-switcher option {
   color: #1A2B49;
-  background-color: #F2F2F2;
+  background-color: white;
 }
 
 .language-switcher:focus-within,
